--- a/css/style.css
+++ b/css/style.css
@@ -242,6 +242,7 @@ header {
   position: relative;
   height: 500px;
   background-image: url(../img/bannerbg.jpg);
+  background-position: center bottom;
   background-size: cover;
   text-align: center; }
   header .icon {
