Added min-height to form to prevent scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -516,6 +516,9 @@ header {
         height: 100px;
         margin: 0 auto;
         width: 400px; }
+  .eventbrite iframe {
+    min-height: 250px;
+  }
 
 .left {
   float: left; }
